styles/_index.scss
//Partial File to be imported in main.scss
//INDEX PAGE
.cover {
	background-image: linear-gradient(45deg, #48dbfb 0%, #267181 100%);
	background-size: 400% 400%;
	overflow: hidden;
	position: relative;
	animation: gradient 30s ease infinite;
}

@keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}
.wrapper {
	min-height: 100vh;
	min-width: 100vw;
	margin-top: 0;
	position: relative;
}

.main-section {
	top: 150px;
	width: 100%;
	padding: 150px 0 0;
}

.display-section {
	h2 {
		text-align: center;
		color: white;
		font-weight: bold;
		margin-bottom: 10px;
	}
	z-index: 1;
	perspective: 1000px;
	color: white;
	width: 400px;
	position: relative;

	&-content {
		z-index: 1;
		position: absolute;
		bottom: 0px;
		width: 360px;
		left: 6%;

		&-intro {
			font-size: 17px;
		}
	}
	.image {
		width: auto;
		max-width: 100%;
	}
}

.display-welcome-text > h1 {
	color: white;
	text-transform: uppercase;
	font-size: 27px;
	margin-top: 20px;
}

.display-welcome-bio {
	margin-top: 20px;
	color: white;

	.fa-stack {
		font-size: 28px;
	}

	.list-inline-item {
		> a {
			color: #373737;
		}
	}
}

.display-welcome-wrapper {
	justify-content: flex-end;
}

@media (max-width: 991px) {
	.display-section {
		width: 341px;

		&-content {
			width: 341px;
		}
	}

	.display-welcome-text > h1 {
		margin-top: 0px;
	}
}

#particles {
	position: absolute;
	width: 100%;
	height: 50%;
	z-index: 1;
}

.shadowed {
	-webkit-filter: drop-shadow(12px 12px 25px rgba(13, 78, 158, 0.6));
	filter: url(#drop-shadow);
	-ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#0d4e9e')";
	filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#0d4e9e')";
}

